k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mvc-core-webapp
  labels:
    app: mvc-core-webapp
spec:
  selector:
    matchLabels:
      deployment: mvc-core-webapp
  replicas: 3
  template:
    metadata:
      labels:
        deployment: mvc-core-webapp
    spec:
      containers:
        - name: mvc-core-webapp
          image: image-registry.openshift-image-registry.svc:5000/mvc-core-app/mvc-core-webapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 10000
              protocol: TCP
