k8s/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: mvc-core-webapp
  labels:
    app: mvc-core-webapp
spec:
  selector:
    app: mvc-core-webapp
  replicas: 1
  template:
    metadata:
      labels:
        app: mvc-core-webapp
    spec:
      containers:
        - name: mvc-core-webapp
          image: image-registry.openshift-image-registry.svc:5000/mvc-core-app/mvc-core-webapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 10000
              protocol: TCP
  triggers:
  - type: ConfigChange 
  - imageChangeParams:
      automatic: true
      containerNames:
      - qotd
      from:
        kind: ImageStreamTag
        name: mvc-core-webapp:latest
    type: ImageChange
