k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mvc-core-webapp
  name: mvc-core-webapp
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: mvc-core-webapp
    weight: 100
